test/ddc-spec/error/01-ErrorExp/04-ImportDuplicate/Test.ds

module Test

import foreign c value
 foo : Nat# -> Nat#

import foreign c value
 foo : Word32# -> Nat#

where
